--- a/API/app/requirements.txt
+++ b/API/app/requirements.txt
@@ -1,14 +1,9 @@
-opencensus-ext-azure
-opencensus-ext-flask
-opencensus
-pyodbc
-flask
-azure-identity
-azure-storage-blob
-cassandra-driver
-flask
-flask-cors
-python-dotenv
-tenacity
-pytz
-datetime
+blinker==1.6.2
+click==8.1.3
+dnspython==2.3.0
+Flask==2.3.2
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+pymongo==4.3.3
+Werkzeug==2.3.4
